--- a/results.ipynb
+++ b/results.ipynb
@@ -206,7 +206,7 @@
     "- The first layer takes in the state passes it through 256 nodes with relu activation\n",
     "- The second layer take the output from  first layer and passes through 128 nodes with relu activation\n",
     "- The third layer takes the output from the previous layer and outputs the action size with Tanh activation\n",
-    "- Adam optermizer."
+    "- Adam optimizer."
    ]
   },
   {
@@ -468,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7: Lets take a look at the Actor model\n",
+    "## 7: Lets take a look at the Critic model\n",
     "Build a critic (value) network that maps (state, action) pairs -> Q-values.\n",
     "- The model  has 4 fully connected layers\n",
     "- The first layer takes the state and passes through 128 nodes with relu activation\n",
@@ -476,7 +476,7 @@
     "- We then pass this to second layer which forwards through 64 nodes with relu activation\n",
     "- The third layer takes the output from the previous layer passes it through 32 nodes with relu activation\n",
     "- The fourth layer take the previous layer outputs 1\n",
-    "- Adam optermizer."
+    "- Adam optimizer."
    ]
   },
   {
@@ -807,13 +807,6 @@
     "y = model(x, z)\n",
     "             \n",
     "make_dot(y, params=dict(list(model.named_parameters())))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When finished, you can close the environment."
    ]
   },
   {
