--- a/results.ipynb
+++ b/results.ipynb
@@ -1050,7 +1050,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10: Now sit back and watch the MASTER trained network collect Bannanas."
+    "## 10: Now sit back and watch the MASTER trained network ."
    ]
   },
   {
