--- a/results.ipynb
+++ b/results.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "## 5: We now import the Agent and assign it a variable\n",
     "\n",
-    "The agent is a DDPG or Deep Dterministic Policy gradient. \n",
+    "The agent is a DDPG or Deep Deterministic Policy gradient. \n",
     "\n",
     "\n",
     "The Hyperparamters below performed great with high results and steady learning curve. Feel free to play with these \n",
